# tmc-cli-rust

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  rustfmt.toml.disabled  taplo.toml
.github/workflows/: linux.yml  macos.yml  windows.yml
flatpak/: fi.mooc.tmc.tmc-cli-rust.yml  metainfo.xml  org.flatpak.tmc.yml  update.sh
scripts/: install.sh
snap/: snapcraft.yaml
src/: cli.rs  client.rs  commands.rs  config.rs  interactive.rs  io.rs  io_module.rs  lib.rs  main.rs  progress_reporting.rs  test_helper.rs  updater.rs
src/commands/: command_handler.rs  command_util.rs  courses.rs  courses_command.rs  download.rs  download_command.rs  exercises.rs  exercises_command.rs  generate_completions.rs  login.rs  login_command.rs  logout.rs  logout_command.rs  mooc.rs  organization.rs  organization_command.rs  paste.rs  paste_command.rs  submit.rs  submit_command.rs  test.rs  test_command.rs  update.rs  update_command.rs  util.rs
src/commands/mooc/: course_exercises.rs  courses.rs  download_exercises.rs  submit_exercise.rs  update_exercises.rs
src/commands/util/: organization.rs
src/config/: configurations.rs  course_config.rs  credentials.rs
src/interactive/: prompt.rs  state.rs
src/progress_reporting/: progress_manager.rs
src/scripts/: install.sh
tests/: command_line_test.rs
wix/: License.rtf  main.wxs  tmc-cli-rust-0.1.0-x86_64.msi
