[package]
name = "tmc"
version = "1.1.1"
authors = [
    "University of Helsinki <mooc@cs.helsinki.fi>",
    "HoolaBoola <jaime.heikkiladias@helsinki.fi>",
    "Robustic <juha.malinen@helsinki.fi>",
    "ShootingStar91 <arttu.kangas@helsinki.fi>",
    "Nooblue <joni.sikio@helsinki.fi>",
    "Daniel Martinez <daniel.x.martinez@helsinki.fi>",
]
edition = "2021"
description = "Client for downloading, testing and submitting exercises through the TestMyCode system."
license = "Apache-2.0"
rust-version = "1.66.1"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "4.0.7", features = ["derive"] }
clap_complete = "4.0.2"
crossterm = "0.25.0"
indicatif = "0.17.1"
reqwest = { version = "0.11.9", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "multipart",
] }
rpassword = "7.0.0"
serde = "1.0.136"
serde_json = "1.0.79"
termcolor = "1.1.3"
terminal_size = "0.2.1"
tmc-langs = { git = "https://github.com/rage/tmc-langs-rust/", tag = "0.30.0" }
toml = "0.5.8"
tui = { version = "0.19.0", default-features = false, features = ['crossterm'] }
url = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[build-dependencies]
clap = { version = "4.0.7", features = ["derive"] }
clap_complete = "4.0.2"
